name:                ferries-website
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ferries-website#readme
license:             BSD3
license-file:        LICENSE
author:              Stefan Church
maintainer:          stefan.church@gmail.com
copyright:           2017 Stefan Church
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Page
                     , Stylesheet
                     , Services
                     , Config
  build-depends:       base >= 4.7 && < 5
                     , blaze-html
                     , text
                     , clay
                     , persistent
                     , persistent-mysql
                     , persistent-template
                     , monad-logger
                     , aeson
                     , yaml
                     , time
                     , old-locale
  default-language:    Haskell2010

executable ferries-website-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ferries-website
                     , scotty
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ferries-website
